2004-04-04  Todd Berman  <tberman@sevenl.net>

	* Gui/Workbench/DefaultWorkbench.cs: register gtype. add message about
	using proper ctor.
	* Gui/BrowserDisplayBinding/HtmlViewPane.cs: remove useless event
	box.

2004-04-04  John Luke  <jluke@cfl.rr.com>

	* Gui/BrowserDisplayBinding/HtmlViewPane.cs:
	* Gui/BrowserDisplayBinding/BrowserDisplayBinding.cs: small cleanups
	* Commands/HelpCommands.cs: make sure dispose is called on the
	tip of the day, about and viewgpl dialogs
	* Commands/ToolsCommands.cs: make sure dispose is called for the
	NewLayoutDialog
	* Gui/Dialogs/NewLayoutDialog.cs: implement IDisposable
	* Gui/Dialogs/ViewGplDialog.cs: implement IDisposable
	* Gui/Dialogs/TipOfTheDayDialog.cs: implement IDisposable

2004-04-04  Todd Berman  <tberman@sevenl.net>

	* Services/ParserService/AssemblyInformation.cs: workaround mono bug
	with Assembly.Load (byte[]). (this fixes radek's bug)
	* Gui/Dialogs/NewProjectDialog.cs: proper string

2004-04-04  Todd Berman  <tberman@sevenl.net>

	* Services/ParserService/DefaultParserService.cs: fix nullref

2004-04-04  John Luke  <jluke@cfl.rr.com>

	* Gui/Pads/FileScout.cs: use Gtk.Stock.Open for the icon
	* Gui/Dialogs/SharpDevelopAboutPanels.cs: call Path.GetFullPath
	on assembly location to get rid of '../AddIn/..' stuff
	send the text to the X clipboard also
	* Gui/BrowserDisplayBinding/HtmlViewPane.cs: register the GType
	to fix weirdness

2004-04-04  Todd Berman  <tberman@sevenl.net>

	* Internal/Codons/MenuItems/MenuItemCodon.cs:
	* Internal/Codons/DialogPanelCodon.cs: change label to _label and
	gettext it

2004-04-04  Nick Drochak  <ndrochak@gol.com>

	* Gui/Dialogs/NewProjectDialog.cs: On double click of icon when there
	is an illegal or empty solution name, do not hide dialog.

2004-04-03  Todd Berman  <tberman@sevenl.net>

	* Gui/Workbench/Layous/SdiWorkspaceLayout.cs: set pref height and width
	on the Documents dockitem to -2 to make gdl-dock attempt to give it
	greedy resizing as much as possible.
